# Django-Admin-Notes

./: .gitignore  README.md  __init__.py  admin.py  apps.py  integrations.py  models.py  pyproject.toml
migrations/: 0001_initial.py
