requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "django-admin-notes"
version = "0.1.0"
description = "Reusable append-only internal admin notes app for Django users."
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Arezak" }]
dependencies = ["Django>=3.2"]

[tool.setuptools]
include-package-data = true
packages = ["admin_notes", "admin_notes.migrations"]

[tool.setuptools.package-dir]
admin_notes = "."
"admin_notes.migrations" = "migrations"
